[gd_scene format=3 uid="uid://dg0lowfwv0dg3"]

[ext_resource type="Script" uid="uid://c4rg2s1ijtbwu" path="res://script/enemy/main_enemy/骑士.gd" id="1_gpn6s"]
[ext_resource type="PackedScene" uid="uid://decyru6mnkuga" path="res://scene/游戏功能组件/hurtboxcomponent.tscn" id="2_ij8k6"]
[ext_resource type="Texture2D" uid="uid://mybwidsudo2r" path="res://sucai/Knight/knight-Sheet_whitefx.png" id="3_elmko"]
[ext_resource type="PackedScene" uid="uid://bnactnfyipltl" path="res://scene/游戏功能组件/health_component.tscn" id="4_hhqmu"]
[ext_resource type="PackedScene" uid="uid://c0i7tc6xpk0n8" path="res://scene/游戏功能组件/drop_component.tscn" id="5_7fhkn"]
[ext_resource type="PackedScene" uid="uid://i5imcyd15vix" path="res://scene/游戏物件/exprience_bottle.tscn" id="6_elmko"]
[ext_resource type="PackedScene" uid="uid://f15fc5ggcq0l" path="res://scene/游戏物件/bonus_bottle.tscn" id="6_gpn6s"]
[ext_resource type="PackedScene" uid="uid://daaqcmminiyk1" path="res://scene/游戏物件/blood_bottle.tscn" id="7_d3vui"]
[ext_resource type="PackedScene" uid="uid://g6ks4dc6kpht" path="res://scene/游戏功能组件/velocity_component.tscn" id="8_nduui"]
[ext_resource type="Script" uid="uid://dw1xa58nup1q4" path="res://script/enemy/main_enemy/骑士冲刺.gd" id="9_ij8k6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vcrpj"]
radius = 13.0

[sub_resource type="AtlasTexture" id="AtlasTexture_2umt1"]
atlas = ExtResource("3_elmko")
region = Rect2(0, 90, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3kh2"]
atlas = ExtResource("3_elmko")
region = Rect2(90, 90, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0prp"]
atlas = ExtResource("3_elmko")
region = Rect2(180, 90, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_ockl4"]
atlas = ExtResource("3_elmko")
region = Rect2(270, 90, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_g67mx"]
atlas = ExtResource("3_elmko")
region = Rect2(360, 90, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_av3ta"]
atlas = ExtResource("3_elmko")
region = Rect2(450, 90, 90, 90)

[sub_resource type="AtlasTexture" id="AtlasTexture_7a888"]
atlas = ExtResource("3_elmko")
region = Rect2(540, 90, 90, 90)

[sub_resource type="SpriteFrames" id="SpriteFrames_fq6t5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2umt1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3kh2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0prp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ockl4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g67mx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_av3ta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7a888")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ntng8"]
radius = 17.001839

[sub_resource type="CircleShape2D" id="CircleShape2D_elmko"]
radius = 57.781265

[node name="骑士" type="CharacterBody2D" unique_id=924095829 node_paths=PackedStringArray("冲刺范围") groups=["终极"]]
scale = Vector2(2.9948473, 3)
collision_layer = 40
collision_mask = 0
script = ExtResource("1_gpn6s")
"冲刺范围" = NodePath("冲刺范围")

[node name="Hurtboxcomponent" parent="." unique_id=1526431326 node_paths=PackedStringArray("health_component") groups=["enemy"] instance=ExtResource("2_ij8k6")]
collision_layer = 4
health_component = NodePath("../health_component")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hurtboxcomponent" unique_id=1672821402]
visible = false
shape = SubResource("CircleShape2D_vcrpj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1417210265 groups=["enemy"]]
position = Vector2(0, -1.0000005)
scale = Vector2(0.8, 0.638)
sprite_frames = SubResource("SpriteFrames_fq6t5")
animation = &"run"
autoplay = "run"
frame_progress = 0.8870586

[node name="对角色造成伤害的碰撞" type="CollisionShape2D" parent="." unique_id=304269472 groups=["enemy"]]
position = Vector2(-5.684342e-14, 1.6666666)
scale = Vector2(0.47134686, 0.4559797)
shape = SubResource("CircleShape2D_ntng8")

[node name="health_component" parent="." unique_id=1614735274 instance=ExtResource("4_hhqmu")]
max_health = 750.0

[node name="drop_component" parent="." unique_id=891120592 node_paths=PackedStringArray("health_component") instance=ExtResource("5_7fhkn")]
drop_thingandpersent = Dictionary[PackedScene, float]({
ExtResource("6_elmko"): 0.0,
ExtResource("7_d3vui"): 0.15,
ExtResource("6_gpn6s"): 0.1
})
drop_range = 3
health_component = NodePath("../health_component")

[node name="velocity_component" parent="." unique_id=1627718359 instance=ExtResource("8_nduui")]
speed = 70
acceleration = 7.0

[node name="冲刺范围" type="Area2D" parent="." unique_id=51090250]
collision_layer = 0
collision_mask = 2
script = ExtResource("9_ij8k6")

[node name="冲刺判定" type="CollisionShape2D" parent="冲刺范围" unique_id=418963039]
visible = false
shape = SubResource("CircleShape2D_elmko")

[node name="rush_duration" type="Timer" parent="." unique_id=1603375560]
wait_time = 1.7999999999999998
one_shot = true

[node name="rush_interval" type="Timer" parent="." unique_id=429099254]
wait_time = 6.0
one_shot = true
